# hypermodern-python

./: .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
src/hypermodern_python/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
