[tool.poetry]
name = "anders-hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andersglindstrom/hypermodern-python"
repository = "https://github.com/andersglindstrom/hypermodern-python"
keywords = ["hypermodern"]
authors = ["Anders Lindstrom <anders@anderslindstrom.com>"]
packages = [
    { include = "hypermodern_python", from = "src" },
]

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
